Major changes to allow the use of filtered 2D images as inputs and arrays of different parameters for each layer. Added noise by using GSL for thread-safe RNG with one state per thread. This will need to be one state per neuron if using anything other than static scheduling. Connections now made according to a probability rather than a number: pCnx__[l] No longer printing connectivity files by default: printConnections=0 Compressing dat files to keep results <= 300MB to avoid crashing Xgrid. Created DebugSerial profile (and handled OMP commands appropriately with #ifdef _OPENMP) to test for thread-safety. Added option to generate new seed and quit: -g Prints out useful username@machine and start time: stdlib.h, unistd.h Changed DT to 0.1 ms. Now express number of inhib. cells as proportion of excit. cells: rInhib Trim now removes: '`' ',' '\' Changed the way random seeds are read in (since it broke again!). Added memory debugging info and change DEBUG level to Release:1 Debug:3 DebugSerial:5 N.B. These are stored in the 'target' not 'project' settings. Consolidated all phases into simulatePhase(). Axon queues now intialized to -BIG rather than 0. Stimuli are now stored as floats (current to inject) rather than ints and input is now a pointer into the stimuli rather than an array for memcpy. updateNetwork() now takes t_start and t_end and so no longer has orphaned parallel constructs. Now storing a nextUpdate time for each neuron to speed up checks for updates. Changed ints to tsteps where appropriate. tstep is now just an int anyway.
Known bugs
==========
Does not change the number of excit. cells from default for l>=1. 
Xgrid percentDone does not get updated (maybe Xgrid bug): -x

Still to do
===========
Print fresh list of parameters. 
SOM wiring. 
Different forms of STDP. 
Parallelize calcConnectivity(). 
Create non-plastic axons to consolidate conductances and solve once per neuron rather than once per synapse. 
Remove NRC RNG routines and replace all with GSL. 

--- a/Spike/Makefile
+++ b/Spike/Makefile
@@ -1,4 +1,30 @@
-PREFIX = /Developer/usr/bin/CC     = $(PREFIX)gcc-4.2 -O3 -lmCFLAGS  = -I/Developer/usr/lib/gcc/i686-apple-darwin9/4.2.1/include/
-LDFLAGS = -L/Developer/usr/lib/gcc/i686-apple-darwin9/4.2.1/LIBS    = -lgompSpike: main.o utils.o array_utils.o rng.o spike.o read_parameters.o	$(CC) -o Spike $(CFLAGS) $(LDFLAGS) main.o utils.o array_utils.o rng.o spike.o read_parameters.o $(LIBS)main.o: main.c	$(CC) -fopenmp $(CFLAGS) -c $(^) $(LDFLAGS)
+CC     = gcc-4.2 -arch i386 -O3 -lm
 
-utils.o: utils.c	$(CC) -fopenmp $(CFLAGS) -c $(^) $(LDFLAGS)array_utils.o: array_utils.c	$(CC) -fopenmp $(CFLAGS) -c $(^) $(LDFLAGS)rng.o: rng.c	$(CC) -fopenmp $(CFLAGS) -c $(^) $(LDFLAGS)spike.o: spike.c	$(CC) -fopenmp $(CFLAGS) -c $(^) $(LDFLAGS)read_parameters.o: read_parameters.c	$(CC) -fopenmp $(CFLAGS) -c $(^) $(LDFLAGS)clean:	rm -f *.o
+CFLAGS  = -I/usr/lib/gcc/i686-apple-darwin9/4.2.1/include/ -I/usr/local/include/gsl/
+LDFLAGS = -L/usr/lib/gcc/i686-apple-darwin9/4.2.1/ -L/usr/local/lib/
+
+LIBS    = -lgomp -lgsl
+
+Spike: main.o array_utils.o utils.o read_parameters.o rng.o spike.o
+	$(CC) -o Spike $(CFLAGS) $(LDFLAGS) main.o array_utils.o utils.o read_parameters.o rng.o spike.o $(LIBS)
+
+main.o: main.c
+	$(CC) -fopenmp $(CFLAGS) -c $(^) $(LDFLAGS)
+
+array_utils.o: array_utils.c
+	$(CC) -fopenmp $(CFLAGS) -c $(^) $(LDFLAGS)
+
+utils.o: utils.c
+	$(CC) -fopenmp $(CFLAGS) -c $(^) $(LDFLAGS)
+
+read_parameters.o: read_parameters.c
+	$(CC) -fopenmp $(CFLAGS) -c $(^) $(LDFLAGS)
+
+rng.o: rng.c
+	$(CC) -fopenmp $(CFLAGS) -c $(^) $(LDFLAGS)
+
+spike.o: spike.c
+	$(CC) -fopenmp $(CFLAGS) -c $(^) $(LDFLAGS)
+
+clean:
+	rm -f *.o
